[package]
name = "battlecats"
version = "0.1.0"
authors = ["Kristen Bateson <kbateson@pdx.edu>, Hayley Howard <hahoward@pdx.edu>"]

[[bin]]
name = "battlecats"

[dependencies]
piston = "0.36.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.46.0"
piston2d-opengl_graphics = "0.53.0"
find_folder = "*"
piston2d-sprite = "0.44.0"